--- a/src/components/CartWidget/CartWidget.css
+++ b/src/components/CartWidget/CartWidget.css
@@ -4,7 +4,18 @@
 }
 
 .itemsIndicador {
-    font-size: 2.5rem;
-    font-weight: bold;
-    color: red;
+    width: 2rem;
+    height: 2rem;
+    border-radius: 50%;
+    background: red;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    margin: 0px auto;
+    padding: 5%;
+    color: #FFD103;
+    font-size: 1.5rem;
+    font-weight:bolder;
+
 }
